--- a/index.html
+++ b/index.html
@@ -716,93 +716,107 @@
                 </div>`;
     }
 
-    function getTVDetails(model) {
-        try {
-            let display = tvDisplay[model[0]] || 'לא ידוע';
-            let isFrame = model.includes('LS03');
-            let isOLED = model.includes('S95') || model.includes('S90') || model.includes('S85');
-            let isNseries = /^UE\d{2}N(4[0-4]00|4500|5[0-5]00)/.test(model);
+   function getTVDetails(model) {
+    try {
+        let display = tvDisplay[model[0]] || 'לא ידוע';
+        let isFrame = model.includes('LS03');
+        let isOLED = model.includes('S95') || model.includes('S90') || model.includes('S85');
+        let isNseries = /^UE\d{2}N(4[0-4]00|4500|5[0-5]00)/.test(model);
 
-            if (isFrame) display = 'The Frame';
-            else if (isOLED) display = 'OLED';
-            else if (isNseries) display = 'N4000-N5500 Series';
-            else if (model[0] === 'U' && modelYearCodes[model[4]] && parseInt(modelYearCodes[model[4]]) >= 2018) display = 'CRYSTAL UHD';
-            else if (model[0] === 'U' && modelYearCodes[model[4]] && parseInt(modelYearCodes[model[4]]) < 2018) display = 'LED';
+        if (isFrame) display = 'The Frame';
+        else if (isOLED) display = 'OLED';
+        else if (isNseries) display = 'N4000-N5500 Series';
+        else if (model[0] === 'U' && modelYearCodes[model[4]] && parseInt(modelYearCodes[model[4]]) >= 2018) display = 'CRYSTAL UHD';
+        else if (model[0] === 'U' && modelYearCodes[model[4]] && parseInt(modelYearCodes[model[4]]) < 2018) display = 'LED';
 
-            let yearCode = '';
-            for (let i = 4; i < model.length; i++) {
-                if (modelYearCodes[model[i]]) {
-                    yearCode = model[i];
-                    break;
-                }
+        let market = tvMarket[model[1]] || 'לא ידוע';
+        let size = model.length >= 4 ? model[2] + model[3] : 'לא זמין';
+
+        // זיהוי שנת הייצור לפי מבנה הקוד
+        let yearCode = '';
+        let series = '';
+        let seriesStart = 4; // מיקום התחלתי ברירת מחדל
+
+        // בדיקה אם יש תבנית כמו QN או NU שמשנה את מיקום השנה
+        if (model.includes('QN') || model.includes('NU')) {
+            let seriesMatch = model.match(/QN\d{2}|NU\d{4}/);
+            if (seriesMatch) {
+                let seriesIndex = seriesMatch.index;
+                series = seriesMatch[0];
+                yearCode = model[seriesIndex + series.length] || '';
+                seriesStart = seriesIndex + series.length + 1;
             }
-            let year = modelYearCodes[yearCode] || 'לא ידוע';
-
-            let market = tvMarket[model[1]] || 'לא ידוע';
-            let size = model.length >= 4 ? model[2] + model[3] : 'לא זמין';
-
-            let seriesStart = yearCode ? model.indexOf(yearCode) + 1 : 4;
-            let seriesEnd = model.length > 12 ? model.length - 3 : model.length;
-            let series = isFrame ? 'LS03' : (isOLED ? model.slice(seriesStart, seriesStart + 3) : model.slice(seriesStart, seriesEnd));
-            if (isNseries) series = model.slice(4, 9);
-            if (!series) series = 'לא ידוע';
-
-            let broadcast = (year >= '2018' && year !== 'לא ידוע') ? 'DVB-T2' : 'DVB-T1';
-
-            let os = 'לא צוינה';
-            if (year === '2023' || year === '2024' || year === '2025') os = 'Tizen 8.0';
-            else if (year === '2022') os = 'Tizen 7.0';
-            else if (year === '2021') os = 'Tizen 6.5';
-            else if (year === '2020') os = 'Tizen 6.0';
-            else if (year === '2019') os = 'Tizen 5.0';
-            else if (year === '2017') os = 'Tizen 4.0';
-            else if (year < '2019' && year !== 'לא ידוע') os = 'Tizen (גרסה ישנה יותר)';
-
-            let country = 'לא ידוע';
-            let countryNote = '';
-            if (model.length >= 13) {
-                let countryCode = model.slice(-2);
-                country = countryCodesTV[countryCode] || 'לא ידוע';
-                if (year === '2025') {
-                    if (countryCode === 'IL') country = 'ישראל (ניופאן)';
-                    else if (countryCode === 'SQ') country = 'ישראל (מחסני חשמל)';
-                }
-                if (model[1] === 'U' || model[1] === 'Q') {
-                    countryNote = ' - יבוא מקביל';
-                } else if (country !== 'ישראל' && country !== 'ישראל (ניופאן)' && country !== 'ישראל (מחסני חשמל)') {
-                    countryNote = ' - יבוא מקביל';
-                }
-            }
-            let imageKey = display === 'LED' ? 'CRYSTAL UHD' : display;
-            let image = productImages[imageKey] || '';
-
-            let featuresHtml = productFeatures[display] ? `
-                <br><strong>${productFeatures[display].description}</strong><br>
-                <ul style="text-align: right; padding-right: 20px;">
-                    ${productFeatures[display].features.map(feature => `<li>${feature}</li>`).join('')}
-                </ul>
-            ` : '';
-
-            return `<div class="card">
-                        טלוויזיה סמסונג - דגם: ${model}<br>
-                        סוג תצוגה: ${display}<br>
-                        אזור שוק: ${market}<br>
-                        גודל מסך: ${size} אינץ'<br>
-                        שנת ייצור: ${year}<br>
-                        סדרת דגם: ${series}<br>
-                        מקלט שידור: ${broadcast}<br>
-                        מערכת הפעלה: ${os}<br>
-                        קוד מדינה: ${country}${countryNote}<br>
-                        ${image ? `<div class="image-asterisk">* תמונה זו היא של סוג המוצר ולא של הדגם הספציפי</div><img src="${image}" alt="${display}">` : ''}
-                        ${featuresHtml}
-                        <a href="https://www.samsung.com/il/search/?searchvalue=${model}" target="_blank">עבור לדגם באתר סמסונג</a>
-                    </div>`;
-        } catch (e) {
-            console.error("שגיאה ב-getTVDetails:", e);
-            return `<div class="card">שגיאה בעיבוד הדגם: ${e.message}</div>`;
+        } else {
+            // אם אין QN/NU, השנה נמצאת במיקום 4
+            yearCode = model[4] || '';
+            seriesStart = 5;
         }
-    }
 
+        let year = modelYearCodes[yearCode] || 'לא ידוע';
+
+        // חישוב הסדרה
+        let seriesEnd = model.length > 12 ? model.length - 3 : model.length;
+        if (!series) {
+            series = isFrame ? 'LS03' : (isOLED ? model.slice(seriesStart, seriesStart + 3) : model.slice(seriesStart, seriesEnd));
+        }
+        if (isNseries) series = model.slice(4, 9);
+        if (!series) series = 'לא ידוע';
+
+        let broadcast = (year >= '2018' && year !== 'לא ידוע') ? 'DVB-T2' : 'DVB-T1';
+
+        let os = 'לא צוינה';
+        if (year === '2023' || year === '2024' || year === '2025') os = 'Tizen 8.0';
+        else if (year === '2022') os = 'Tizen 7.0';
+        else if (year === '2021') os = 'Tizen 6.5';
+        else if (year === '2020') os = 'Tizen 6.0';
+        else if (year === '2019') os = 'Tizen 5.0';
+        else if (year === '2017') os = 'Tizen 4.0';
+        else if (year < '2019' && year !== 'לא ידוע') os = 'Tizen (גרסה ישנה יותר)';
+
+        let country = 'לא ידוע';
+        let countryNote = '';
+        if (model.length >= 13) {
+            let countryCode = model.slice(-2);
+            country = countryCodesTV[countryCode] || 'לא ידוע';
+            if (year === '2025') {
+                if (countryCode === 'IL') country = 'ישראל (ניופאן)';
+                else if (countryCode === 'SQ') country = 'ישראל (מחסני חשמל)';
+            }
+            if (model[1] === 'U' || model[1] === 'Q') {
+                countryNote = ' - יבוא מקביל';
+            } else if (country !== 'ישראל' && country !== 'ישראל (ניופאן)' && country !== 'ישראל (מחסני חשמל)') {
+                countryNote = ' - יבוא מקביל';
+            }
+        }
+        let imageKey = display === 'LED' ? 'CRYSTAL UHD' : display;
+        let image = productImages[imageKey] || '';
+
+        let featuresHtml = productFeatures[display] ? `
+            <br><strong>${productFeatures[display].description}</strong><br>
+            <ul style="text-align: right; padding-right: 20px;">
+                ${productFeatures[display].features.map(feature => `<li>${feature}</li>`).join('')}
+            </ul>
+        ` : '';
+
+        return `<div class="card">
+                    טלוויזיה סמסונג - דגם: ${model}<br>
+                    סוג תצוגה: ${display}<br>
+                    אזור שוק: ${market}<br>
+                    גודל מסך: ${size} אינץ'<br>
+                    שנת ייצור: ${year}<br>
+                    סדרת דגם: ${series}<br>
+                    מקלט שידור: ${broadcast}<br>
+                    מערכת הפעלה: ${os}<br>
+                    קוד מדינה: ${country}${countryNote}<br>
+                    ${image ? `<div class="image-asterisk">* תמונה זו היא של סוג המוצר ולא של הדגם הספציפי</div><img src="${image}" alt="${display}">` : ''}
+                    ${featuresHtml}
+                    <a href="https://www.samsung.com/il/search/?searchvalue=${model}" target="_blank">עבור לדגם באתר סמסונג</a>
+                </div>`;
+    } catch (e) {
+        console.error("שגיאה ב-getTVDetails:", e);
+        return `<div class="card">שגיאה בעיבוד הדגם: ${e.message}</div>`;
+    }
+}
     function getMicrowaveOvenDetails(model) {
         let type = microwaveType[model.slice(0, 2)] || 'לא ידוע';
         let capacity = parseInt(model[2] + model[3]) || 0;
