--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
     }
   .card-buttons {
     position: absolute;
-    top: 10px;
+    top: 50px; /* שינוי מ-10px ל-50px */
     left: 10px;
     display: flex;
     flex-direction: column;
