--- a/index.html
+++ b/index.html
@@ -156,34 +156,62 @@
         margin-top: 20px;
         text-align: center;
     }
+   .card-buttons {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 8px; /* הקטנת המרווח בין הכפתורים מ-10px ל-8px */
+}
+
+.card-buttons a {
+    display: block;
+    padding: 8px 15px; /* הקטנת ה-padding מ-10px 25px ל-8px 15px */
+    background: #1d3557;
+    color: #ffffff;
+    text-decoration: none;
+    border-radius: 6px; /* הקטנת ה-radius מ-8px ל-6px למראה עדין יותר */
+    transition: background 0.3s;
+    font-weight: 500;
+    text-align: center;
+    font-size: 14px; /* הקטנת גודל הגופן מ-16px ל-14px */
+}
+
+.card-buttons a:hover {
+    background: #457b9d;
+}
+
+.search-note {
+    font-size: 12px; /* הקטנת גודל הגופן מ-14px ל-12px */
+    color: #457b9d;
+    margin-top: 4px; /* הקטנת המרווח העליון מ-5px ל-4px */
+    text-align: right;
+    line-height: 1.2; /* שיפור הקריאות עם רווח שורות קטן יותר */
+}
+
+/* התאמה למובייל */
+@media only screen and (max-width: 768px) {
+    .card {
+        padding: 15px;
+        padding-top: 100px; /* הקטנת ה-padding העליון מ-120px ל-100px כדי להתאים לכפתורים קטנים יותר */
+        font-size: 14px;
+        line-height: 1.4;
+    }
     .card-buttons {
-        position: absolute;
         top: 10px;
         left: 10px;
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
+        width: calc(100% - 20px);
     }
     .card-buttons a {
-        display: block;
-        padding: 10px 25px;
-        background: #1d3557;
-        color: #ffffff;
-        text-decoration: none;
-        border-radius: 8px;
-        transition: background 0.3s;
-        font-weight: 500;
-        text-align: center;
-    }
-    .card-buttons a:hover {
-        background: #457b9d;
+        font-size: 12px; /* הקטנת גודל הגופן ל-12px במובייל */
+        padding: 6px 12px; /* הקטנת ה-padding ל-6px 12px במובייל */
     }
     .search-note {
-        font-size: 14px;
-        color: #457b9d;
-        margin-top: 5px;
-        text-align: right;
+        font-size: 10px; /* הקטנת גודל הגופן ל-10px במובייל */
+        margin-top: 3px; /* הקטנת המרווח ל-3px */
     }
+}
     #loader, #loader-serial {
         display: none;
         margin: 20px auto;
