--- a/index.html
+++ b/index.html
@@ -864,122 +864,129 @@
                 </div>`;
     }
 
-    function getTVDetails(model) {
-        try {
-            let display = tvDisplay[model[0]] || 'לא ידוע';
-            let isFrame = model.includes('LS03');
-            let isOLED = model.includes('S95') || model.includes('S90') || model.includes('S85');
-            let isNseries = /^UE\d{2}N(4[0-4]00|4500|5[0-5]00)/.test(model);
+   function getTVDetails(model) {
+    try {
+        let display = tvDisplay[model[0]] || 'לא ידוע';
+        let isFrame = model.includes('LS03');
+        let isOLED = model.includes('S95') || model.includes('S90') || model.includes('S85') || model.includes('S80');
+        let isNseries = /^UE\d{2}N(4[0-4]00|4500|5[0-5]00)/.test(model);
 
-            if (isFrame) display = 'The Frame';
-            else if (isOLED) display = 'OLED';
-            else if (isNseries) display = 'N4000-N5500 Series';
-            else if (model[0] === 'U' && modelYearCodes[model[4]] && parseInt(modelYearCodes[model[4]]) >= 2018) display = 'CRYSTAL UHD';
-            else if (model[0] === 'U' && modelYearCodes[model[4]] && parseInt(modelYearCodes[model[4]]) < 2018) display = 'LED';
+        if (isFrame) display = 'The Frame';
+        else if (isOLED) display = 'OLED';
+        else if (isNseries) display = 'N4000-N5500 Series';
+        else if (model[0] === 'U' && modelYearCodes[model[4]] && parseInt(modelYearCodes[model[4]]) >= 2018) display = 'CRYSTAL UHD';
+        else if (model[0] === 'U' && modelYearCodes[model[4]] && parseInt(modelYearCodes[model[4]]) < 2018) display = 'LED';
+        else if (model.includes('QN')) display = 'QLED'; // QLED עבור דגמי QN
 
-            let market = tvMarket[model[1]] || 'לא ידוע';
-            let size = model.length >= 4 ? model[2] + model[3] : 'לא זמין';
+        let market = tvMarket[model[1]] || 'לא ידוע';
+        let size = model.length >= 4 ? model[2] + model[3] : 'לא זמין';
 
-            let yearCode = '';
-            let series = '';
-            let seriesStart = 4;
+        let yearCode = '';
+        let series = '';
+        let seriesStart = 4;
 
-            if (model.includes('QN') || model.includes('NU')) {
-                let seriesMatch = model.match(/QN\d{2}|NU\d{4}/);
-                if (seriesMatch) {
-                    let seriesIndex = seriesMatch.index;
-                    series = seriesMatch[0];
-                    yearCode = model[seriesIndex + series.length] || '';
-                    seriesStart = seriesIndex + series.length + 1;
-                }
-            } else if (isFrame) {
-                let frameIndex = model.indexOf('LS03');
-                if (frameIndex !== -1) {
-                    series = 'LS03';
-                    yearCode = model[frameIndex + 4] || '';
-                    seriesStart = frameIndex + 5;
-                }
-            } else {
-                yearCode = model[4] || '';
-                seriesStart = 5;
+        // זיהוי תבנית כללית: Q[NEA] + 2 ספרות + (QN|S|LS03) + 2 ספרות + שנה
+        if (/^Q[NEA]\d{2}(QN|S|LS03)\d{2}/.test(model)) {
+            let seriesMatch = model.match(/(QN|S|LS03)\d{2}/);
+            if (seriesMatch) {
+                let seriesIndex = seriesMatch.index;
+                series = seriesMatch[0]; // לוקח QN80, S85, או LS03
+                yearCode = model[seriesIndex + series.length] || ''; // השנה מיד אחרי
+                seriesStart = seriesIndex + series.length + 1;
             }
-
-            let year = modelYearCodes[yearCode] || 'לא ידוע';
-
-            let seriesEnd = model.length > 12 ? model.length - 3 : model.length;
-            if (!series) {
-                series = isOLED ? model.slice(seriesStart, seriesStart + 3) : model.slice(seriesStart, seriesEnd);
-            }
-            if (isNseries) series = model.slice(4, 9);
-            if (!series) series = 'לא ידוע';
-
-            let broadcast = (year >= '2018' && year !== 'לא ידוע') ? 'DVB-T2' : 'DVB-T1';
-
-            let os = 'לא צוינה';
-            if (year !== 'לא ידוע') {
-                const yearNum = parseInt(year);
-                if (yearNum >= 2024) os = 'Tizen 9.0';
-                else if (yearNum === 2023) os = 'Tizen 8.0';
-                else if (yearNum === 2022) os = 'Tizen 7.0';
-                else if (yearNum === 2021) os = 'Tizen 6.5';
-                else if (yearNum === 2020) os = 'Tizen 6.0';
-                else if (yearNum === 2019) os = 'Tizen 5.5';
-                else if (yearNum === 2018) os = 'Tizen 5.0';
-                else if (yearNum === 2017) os = 'Tizen 4.0';
-                else if (yearNum === 2016) os = 'Tizen 3.0';
-                else if (yearNum === 2015) os = 'Tizen 2.4';
-                else if (yearNum === 2014) os = 'Tizen 2.3';
-                else if (yearNum <= 2013) os = 'Tizen 2.0';
-            }
-
-            let country = 'לא ידוע';
-            let countryNote = '';
-            if (model.length >= 13) {
-                let countryCode = model.slice(-2);
-                country = countryCodesTV[countryCode] || 'לא ידוע';
-                if (year === '2025') {
-                    if (countryCode === 'IL') country = 'ישראל (ניופאן)';
-                    else if (countryCode === 'SQ') country = 'ישראל (מחסני חשמל)';
-                }
-                if (model[1] === 'U' || model[1] === 'Q') {
-                    countryNote = ' - יבוא מקביל';
-                } else if (country !== 'ישראל' && country !== 'ישראל (ניופאן)' && country !== 'ישראל (מחסני חשמל)') {
-                    countryNote = ' - יבוא מקביל';
-                }
-            }
-            let imageKey = display === 'LED' ? 'CRYSTAL UHD' : display;
-            let image = productImages[imageKey] || '';
-
-            let featuresHtml = productFeatures[display] ? `
-                <br><strong>${productFeatures[display].description}</strong><br>
-                <ul style="text-align: right; padding-right: 20px;">
-                    ${productFeatures[display].features.map(feature => `<li>${feature}</li>`).join('')}
-                </ul>
-            ` : '';
-
-            return `<div class="card">
-                        <div class="card-buttons">
-                            <a href="https://www.samsung.com/il/search/?searchvalue=${model}" target="_blank">עבור לדגם באתר סמסונג</a>
-                            <a href="#" onclick="searchManual('${model}'); return false;">חפש מדריך למשתמש</a>
-                            <div class="search-note">* לאחר המעבר, הזן את קוד הדגם "${model}" בשדה החיפוש בדף.</div>
-                        </div>
-                        טלוויזיה סמסונג - דגם: ${model}<br>
-                        סוג תצוגה: ${display}<br>
-                        אזור שוק: ${market}<br>
-                        גודל מסך: ${size} אינץ'<br>
-                        שנת ייצור: ${year}${year === 'לא ידוע' && yearCode ? ` (קוד לא מזוהה: ${yearCode})` : ''}<br>
-                        סדרת דגם: ${series}<br>
-                        מקלט שידור: ${broadcast}<br>
-                        מערכת הפעלה: ${os}<br>
-                        קוד מדינה: ${country}${countryNote}<br>
-                        ${image ? `<div class="image-asterisk">* תמונה זו היא של סוג המוצר ולא של הדגם הספציפי</div><img src="${image}" alt="${display}">` : ''}
-                        ${featuresHtml}
-                    </div>`;
-        } catch (e) {
-            console.error("שגיאה ב-getTVDetails:", e);
-            return `<div class="card">שגיאה בעיבוד הדגם: ${e.message}</div>`;
         }
+        // זיהוי דגמי Neo QLED או NU ישנים יותר (למשל QN85C)
+        else if (model.includes('QN') || model.includes('NU')) {
+            let seriesMatch = model.match(/QN\d{2}|NU\d{4}/);
+            if (seriesMatch) {
+                let seriesIndex = seriesMatch.index;
+                series = seriesMatch[0];
+                yearCode = model[seriesIndex + series.length] || '';
+                seriesStart = seriesIndex + series.length + 1;
+            }
+        }
+        // ברירת מחדל לדגמים רגילים (למשל UE65RU8000)
+        else {
+            yearCode = model[4] || '';
+            seriesStart = 5;
+        }
+
+        let year = modelYearCodes[yearCode] || 'לא ידוע';
+
+        let seriesEnd = model.length > 12 ? model.length - 3 : model.length;
+        if (!series) {
+            series = model.slice(seriesStart, seriesEnd);
+        }
+        if (isNseries) series = model.slice(4, 9);
+        if (!series) series = 'לא ידוע';
+
+        let broadcast = (year >= '2018' && year !== 'לא ידוע') ? 'DVB-T2' : 'DVB-T1';
+
+        let os = 'לא צוינה';
+        if (year !== 'לא ידוע') {
+            const yearNum = parseInt(year);
+            if (yearNum >= 2024) os = 'Tizen 9.0';
+            else if (yearNum === 2023) os = 'Tizen 8.0';
+            else if (yearNum === 2022) os = 'Tizen 7.0';
+            else if (yearNum === 2021) os = 'Tizen 6.5';
+            else if (yearNum === 2020) os = 'Tizen 6.0';
+            else if (yearNum === 2019) os = 'Tizen 5.5';
+            else if (yearNum === 2018) os = 'Tizen 5.0';
+            else if (yearNum === 2017) os = 'Tizen 4.0';
+            else if (yearNum === 2016) os = 'Tizen 3.0';
+            else if (yearNum === 2015) os = 'Tizen 2.4';
+            else if (yearNum === 2014) os = 'Tizen 2.3';
+            else if (yearNum <= 2013) os = 'Tizen 2.0';
+        }
+
+        let country = 'לא ידוע';
+        let countryNote = '';
+        if (model.length >= 13) {
+            let countryCode = model.slice(-2);
+            country = countryCodesTV[countryCode] || 'לא ידוע';
+            if (year === '2025') {
+                if (countryCode === 'IL') country = 'ישראל (ניופאן)';
+                else if (countryCode === 'SQ') country = 'ישראל (מחסני חשמל)';
+            }
+            if (model[1] === 'U' || model[1] === 'Q') {
+                countryNote = ' - יבוא מקביל';
+            } else if (country !== 'ישראל' && country !== 'ישראל (ניופאן)' && country !== 'ישראל (מחסני חשמל)') {
+                countryNote = ' - יבוא מקביל';
+            }
+        }
+        let imageKey = display === 'LED' ? 'CRYSTAL UHD' : display;
+        let image = productImages[imageKey] || '';
+
+        let featuresHtml = productFeatures[display] ? `
+            <br><strong>${productFeatures[display].description}</strong><br>
+            <ul style="text-align: right; padding-right: 20px;">
+                ${productFeatures[display].features.map(feature => `<li>${feature}</li>`).join('')}
+            </ul>
+        ` : '';
+
+        return `<div class="card">
+                    <div class="card-buttons">
+                        <a href="https://www.samsung.com/il/search/?searchvalue=${model}" target="_blank">עבור לדגם באתר סמסונג</a>
+                        <a href="#" onclick="searchManual('${model}'); return false;">חפש מדריך למשתמש</a>
+                        <div class="search-note">* לאחר המעבר, הזן את קוד הדגם "${model}" בשדה החיפוש בדף.</div>
+                    </div>
+                    טלוויזיה סמסונג - דגם: ${model}<br>
+                    סוג תצוגה: ${display}<br>
+                    אזור שוק: ${market}<br>
+                    גודל מסך: ${size} אינץ'<br>
+                    שנת ייצור: ${year}${year === 'לא ידוע' && yearCode ? ` (קוד לא מזוהה: ${yearCode})` : ''}<br>
+                    סדרת דגם: ${series}<br>
+                    מקלט שידור: ${broadcast}<br>
+                    מערכת הפעלה: ${os}<br>
+                    קוד מדינה: ${country}${countryNote}<br>
+                    ${image ? `<div class="image-asterisk">* תמונה זו היא של סוג המוצר ולא של הדגם הספציפי</div><img src="${image}" alt="${display}">` : ''}
+                    ${featuresHtml}
+                </div>`;
+    } catch (e) {
+        console.error("שגיאה ב-getTVDetails:", e);
+        return `<div class="card">שגיאה בעיבוד הדגם: ${e.message}</div>`;
     }
+}
 
     function getMicrowaveOvenDetails(model) {
         let type = microwaveType[model.slice(0, 2)] || 'לא ידוע';
